--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ members = [
   "crates/sui-aws-orchestrator",
   "crates/sui-benchmark",
   "crates/sui-bridge",
+  "crates/sui-bridge-cli",
   "crates/sui-cluster-test",
   "crates/sui-common",
   "crates/sui-config",
