--- a/nre/helm/graphql/templates/configmap.yaml
+++ b/nre/helm/graphql/templates/configmap.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.configMapName }}
-data:
-{{ (.Files.Glob "graphql.toml").AsConfig }}
+data: |
+    {{ (.Files.Get "files/config/graphql.toml") | nindent 4 }}
