--- a/nre/helm/indexer-writer/values.yaml
+++ b/nre/helm/indexer-writer/values.yaml
@@ -1,32 +1,56 @@
-# Default values for indexer-reader.
+# Default values for indexer-writer.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+# there is only a single indexer-writer deployment expected for normal operation
 replicaCount: 1
 
 image:
-  repository: nginx
-  pullPolicy: IfNotPresent
+  repository: "mysten/sui-indexer"
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "sui-v1.25.0-release"
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+env:
+  RUST_BACKTRACE:
+    value: 1
+  RUST_LOG:
+    value: "info,jsonrpsee=error,jsonrpsee_types=error"
+  RUST_JSON_LOG:
+    value: true
+  DB_CONNECTION_TIMEOUT:
+    value: 3600
+  DB_STATEMENT_TIMEOUT:
+    value: 3600
+  CHECKPOINT_COMIT_BATCH_SIZE:
+    value: 300
+  RPC_URL: 
+    value: "https://public-rpc.mainnet.sui.io" # you will want to point this to a local fullnode instance like http://<servicename>.<namespace>.svc.cluster.local:900
+  DB_URL:
+    valueFrom:
+      secretKeyRef:
+        name: "indexer-writer-db-secret"
+        key: "db-url"
+
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Automatically mount a ServiceAccount's API credentials?
   automount: true
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  name: "sui-indexer-sa"
 
-podAnnotations: {}
-podLabels: {}
+podAnnotations:
+  prometheus.io/path: "/metrics"
+  prometheus.io/port: "9184"
+  prometheus.io/scrape: "true"
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -41,7 +65,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 9000
 
 ingress:
   enabled: false
@@ -50,7 +74,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: sui-indexer.local
       paths:
         - path: /
           pathType: ImplementationSpecific
