--- a/crates/suins-indexer/Cargo.toml
+++ b/crates/suins-indexer/Cargo.toml
@@ -32,6 +32,7 @@ url.workspace = true
 sui-json-rpc.workspace = true
 dotenvy = "0.15"
 move-core-types.workspace = true
+mysten-service.workspace = true
 
 [dev-dependencies]
 rand.workspace = true
