--- a/docs/site/vercel.json
+++ b/docs/site/vercel.json
@@ -93,6 +93,7 @@
       { "source": "/guides/developer/app-examples/trading/:path*", "destination": "/guides/developer/app-examples/trustless-swap/:path*", "permanent": true},
       { "source": "/guides/developer/app-examples/trustless-token-swap/:path*", "destination": "/guides/developer/app-examples/trustless-swap/:path*", "permanent": true},
       { "source": "/concepts/cryptography/zklogin/zklogin-example", "destination": "/guides/developer/cryptography/zklogin-integration/zklogin-example", "permanent": true},
-      { "source": "/guides/developer/getting-started/sui-environment", "destination": "/references/contribute/sui-environment", "permanent": true}
+      { "source": "/guides/developer/getting-started/sui-environment", "destination": "/references/contribute/sui-environment", "permanent": true},
+      { "source": "/concepts/sui-move-concepts/packages/:path*", "destination": "https://move-book.com/index.html", "permanent": true}
     ]
   }
