--- a/nre/helm/indexer-reader/values.yaml
+++ b/nre/helm/indexer-reader/values.yaml
@@ -1,7 +1,8 @@
 # Default values for indexer-reader.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-command: ["/usr/local/bin/sui-indexer", "--db-url", "$DB_URL", "--rpc-client-url", "$RPC_URL", "--remote-store-url", "https://checkpoints.testnet.sui.io", "--rpc-server-worker"]
+#command: ["/bin/bash -c","/usr/local/bin/sui-indexer --db-url $DB_URL --rpc-client-url $RPC_URL --remote-store-url https://checkpoints.mainnet.sui.io --rpc-server-worker"]
+command: ["/usr/local/bin/sui-indexer", "--db-url", "$(DB_URL)", "--rpc-client-url", "https://public-rpc.mainnet.sui.io", "--remote-store-url", "https://checkpoints.mainnet.sui.io", "--rpc-server-worker"]
 
 replicaCount: 1
 
@@ -13,23 +14,21 @@ image:
 
 env:
   RUST_BACKTRACE:
-    value: 1
+    value: "1"
   RUST_LOG:
     value: "info,jsonrpsee=error,jsonrpsee_types=error"
   RUST_JSON_LOG:
-    value: true
+    value: "true"
   DB_CONNECTION_TIMEOUT:
-    value: 3600
+    value: "3600"
   DB_STATEMENT_TIMEOUT:
-    value: 3600
+    value: "3600"
   CHECKPOINT_COMIT_BATCH_SIZE:
-    value: 300
-  RPC_URL: 
-    value: "https://public-rpc.mainnet.sui.io" # you will want to point this to a local fullnode instance like http://<servicename>.<namespace>.svc.cluster.local:900
+    value: "300"
   DB_URL:
     valueFrom:
       secretKeyRef:
-        name: "indexer-reader-db-secret"
+        name: "indexer-reader-db-url-secret"
         key: "db-url"
 
 podAnnotations:
@@ -47,6 +46,8 @@ service:
   name: indexer-reader
   type: ClusterIP
   port: 9000
+  targetPort: 9000
+  protocol: TCP
 
 autoscaling:
   enabled: false
@@ -72,7 +73,7 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "sui-indexer-reader-sa"
+  name: "default"
 
 ingress:
   enabled: false
@@ -90,6 +91,16 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
+    #livenessProbe:
+    #httpGet:
+    #path: /json-rpc
+    #port: 9000
+    #readinessProbe:
+    #httpGet:
+    #path: /json-rpc
+    #port: 9000
+
+
 # Additional volumes on the output Deployment definition.
 volumes: []
 # - name: foo
@@ -103,8 +114,8 @@ volumeMounts: []
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
-nodeSelector:
-    node.kubernetes.io/instance-type: n2d-standard-16
+  #nodeSelector:
+  #node.kubernetes.io/instance-type: n2d-standard-16
 
 tolerations: []
 
