indexer-reader deploys now

--- a/nre/helm/indexer-reader/templates/deployment.yaml
+++ b/nre/helm/indexer-reader/templates/deployment.yaml
@@ -51,7 +51,8 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          command: {{ .Values.command }}
+          command: {{ .Values.command | toJson }}
+          args: {{ .Values.args | toJson }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
