--- a/crates/sui-core/Cargo.toml
+++ b/crates/sui-core/Cargo.toml
@@ -103,6 +103,7 @@ expect-test.workspace = true
 fs_extra.workspace = true
 more-asserts.workspace = true
 pretty_assertions.workspace = true
+rstest.workspace = true
 serde-reflection.workspace = true
 serde_yaml.workspace = true
 num-bigint = "0.4.4"
