--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ members = [
   "crates/sui-benchmark",
   "crates/sui-bridge",
   "crates/sui-bridge-cli",
+  "crates/sui-bridge-indexer",
   "crates/sui-cluster-test",
   "crates/sui-common",
   "crates/sui-config",
