db schema and token transfer data models

--- a/crates/sui-bridge-indexer/diesel.toml
+++ b/crates/sui-bridge-indexer/diesel.toml
@@ -2,8 +2,8 @@
 # see https://diesel.rs/guides/configuring-diesel-cli
 
 [print_schema]
-file = "src/indexer/schema.rs"
-custom_type_derives = ["diesel::query_builder::QueryId"]
+file = "src/schema.rs"
+#custom_type_derives = ["diesel::query_builder::QueryId"]
 
 [migrations_directory]
-dir = "src/indexer/migrations"
+dir = "src/migrations"
