--- a/nre/helm/graphql/templates/configmap.yaml
+++ b/nre/helm/graphql/templates/configmap.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.configMapName }}
-data: |
-    {{ (.Files.Get "files/config/graphql.toml") | nindent 4 }}
+data: 
+  graphql.toml: | 
+{{- (.Files.Get "files/config/graphql.toml") | nindent 4 }}
