--- a/nre/helm/graphql/values.yaml
+++ b/nre/helm/graphql/values.yaml
@@ -9,43 +9,48 @@
 # RPC_URL is also expected to be an env var so the command properly populates
 command: ["/opt/sui/bin/sui-graphql-rpc", "start-server","--host","0.0.0.0","--port","8001","--db-url","$DB_URL","--node-rpc-url", "$RPC_URL","--config","/opt/sui/config/graphql.toml","--ide-title","Sui RPC2.0 GraphQL"]
 
-configMapName: graphql-testnet-toml
 
 env:
   RUST_BACKTRACE:
-    value: 1
-  RUST_LOG:
-    value: "info,jsonrpsee=error,jsonrpsee_types=error"
-  RUST_JSON_LOG:
-    value: true
-  DB_CONNECTION_TIMEOUT:
-    value: 3600
-  DB_STATEMENT_TIMEOUT:
-    value: 3600
-  CHECKPOINT_COMIT_BATCH_SIZE:
-    value: 300
+    value: "1"
   RPC_URL: 
     value: "https://public-rpc.mainnet.sui.io" # you will want to point this to a local fullnode instance like http://<servicename>.<namespace>.svc.cluster.local:900
   DB_URL:
     valueFrom:
       secretKeyRef:
-        name: "indexer-reader-db-secret"
+        name: "indexer-reader-db-url-secret"
         key: "db-url"
 
+configMapName: graphql-toml
 # Additional volumes on the output Deployment definition.
 volumes:
- - name: graphql-testnet-toml
+ - name: graphql-toml-volume
    configMap:
-    name: graphql-testnet-toml
+    name: graphql-toml
+    items:
+      - key: graphql.toml
+        path: graphql.toml 
 
 # Additional volumeMounts on the output Deployment definition.
 volumeMounts:
- - name: graphql-testnet-toml
+ - name: graphql-toml-volume
    mountPath: "/opt/sui/config/graphql.toml"
    subPath: "graphql.toml"
    readOnly: true
 
 replicaCount: 3
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: false
+  # Automatically mount a ServiceAccount's API credentials?
+  automount: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: "default"
+
 
 image:
   repository: "mysten/sui-graphql-rpc"
@@ -57,17 +62,6 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: false
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: "graphql-sa"
 
 podAnnotations:
   prometheus.io/path: "/metrics"
@@ -118,14 +112,14 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
+#livenessProbe:
+#  httpGet:
+#    path: /
+#    port: http
+#readinessProbe:
+#  httpGet:
+#    path: /
+#    port: http
 
 autoscaling:
   enabled: false
@@ -133,19 +127,6 @@ autoscaling:
   maxReplicas: 15
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
-
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
 
 nodeSelector: {}
 
