--- a/nre/helm/indexer-writer/values.yaml
+++ b/nre/helm/indexer-writer/values.yaml
@@ -21,17 +21,17 @@ fullnameOverride: ""
 
 env:
   RUST_BACKTRACE:
-    value: 1
+    value: "1"
   RUST_LOG:
     value: "info,jsonrpsee=error,jsonrpsee_types=error"
   RUST_JSON_LOG:
-    value: true
+    value: "true"
   DB_CONNECTION_TIMEOUT:
-    value: 3600
+    value: "3600"
   DB_STATEMENT_TIMEOUT:
-    value: 3600
+    value: "3600"
   CHECKPOINT_COMIT_BATCH_SIZE:
-    value: 300
+    value: "300"
   RPC_URL: 
     value: "https://public-rpc.mainnet.sui.io" # you will want to point this to a local fullnode instance like http://<servicename>.<namespace>.svc.cluster.local:900
   DB_URL:
@@ -39,6 +39,18 @@ env:
       secretKeyRef:
         name: "indexer-writer-db-secret"
         key: "db-url"
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: false
+  # Automatically mount a ServiceAccount's API credentials?
+  automount: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: "default"
+
 
 podAnnotations:
   prometheus.io/path: "/metrics"
@@ -72,14 +84,19 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
+#livenessProbe:
+#  httpGet:
+#    path: /
+#    port: http
+#readinessProbe:
+#  httpGet:
+#    path: /
+#    port: http
+
+# rollout strategy
+strategy:
+  rollingUpdate:
+    maxSurge: 25%
 
 autoscaling:
   enabled: false
@@ -100,6 +117,23 @@ volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
+
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: sui-indexer.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
 
 nodeSelector: {}
 
