--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Install Foundry
         run: |
           curl -L https://foundry.paradigm.xyz | { cat; echo '$FOUNDRY_BIN_DIR/foundryup'; } | bash
-          echo "$HOME/.config/.foundry/bin" >> $GITHUB_PATH
+          echo "$HOME/.foundry/bin" >> $GITHUB_PATH
       - name: cargo test
         run: |
           sudo sysctl -w net.ipv6.conf.all.disable_ipv6=0 # Enable ipv6
