--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -68,7 +68,9 @@ jobs:
           echo "export PATH=$HOME/.foundry/bin:\$PATH" >> $HOME/.profile
           export PATH=$HOME/.foundry/bin:$PATH
           # Run foundryup
-          $HOME/.foundry/bin/foundryup
+          #$HOME/.foundry/bin/foundryup
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: Set environment variables
         run: |
           echo "CARGO_PROFILE_TEST_BUILD_OVERRIDE_DEBUG=true" >> $GITHUB_ENV
