--- a/nre/helm/sui-node/values.yaml
+++ b/nre/helm/sui-node/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-command: ["/usr/local/bin/sui-node"]
+command: ["/usr/local/bin/sui-node", "--config-path", "/opt/bin/sui/config/sui-node.yaml"]
 args: []
 
 # there is only a single indexer-writer deployment expected for normal operation
@@ -38,7 +38,7 @@ serviceAccount:
 pvc:
   enabled: true
   name: sui-node-pvc
-  storageClassName: pd-ssd
+  storageClassName: premium-rwo # pd-ssd preferred
   accessModes:
     - ReadWriteOnce
   resources:
@@ -50,8 +50,8 @@ podAnnotations:
   prometheus.io/port: "9184"
   prometheus.io/scrape: "true"
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext:
+  fsGroup: 2000
 
 securityContext: {}
   # capabilities:
@@ -94,34 +94,27 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-genesisBlobConfigMapName: genesis-blob-mainnet
-genesisBlobPath: "files/encoded-genesis.blob.mainnet"
+
+genesisDownload:
+  network: mainnet
 
 suiNodeYamlConfigMapName: sui-node-config-mainnet
 suiNodeYamlPath: "files/sui-node.mainnet.yaml"
 
+# config used by the snapshot downloader init container
 snapshotConfig:
-  snapshotEnabled: true
+  enabled: true
   snapshotType: "formal"  # or "db"
-  snapshotEpoch: "400"
-  snapshotNetwork: "mainnet"
-  #imageOverride:
-  resources:
-    limits:
-      cpu: 100m
-      memory: 128Mi
-    requests:
-      cpu: 100m
-      memory: 128Mi
+  epoch: "400"
+  network: "mainnet"
+  imageOverride: mysten/sui-tools:6579e0ed9e432bae47a407daaf01f08c298bcb14
+  formalSnapshotCommand: ["/bin/bash", "-c", "[ -e '/opt/sui/db/authorities_db/full_node_db/live/' ] && echo 'File exists, snapshot not required' || \
+      /usr/local/bin/sui-tool download-formal-snapshot --epoch 400 --genesis /opt/sui/config/genesis.blob --network mainnet --path /opt/sui/db/authorities_db/full_node_db --num-parallel-downloads 100 --no-sign-request"]
+  dbSnapshotCommand: ["/bin/bash", "-c", "[ -e '/opt/sui/db/authorities_db/full_node_db/live/' ] && echo 'File exists, snapshot not required' || \
+     (sui-tool download-db-snapshot --epoch 400 --network mainnet --path /opt/sui/db/authorities_db/full_node_db --num-parallel-downloads 100 --snapshot-bucket-type=gcs && mv /opt/sui/db/authorities_db/full_node_db/epoch_%s/ /opt/sui/db/authorities_db/full_node_db/live/)"]
 
 podLabels:
   app: "sui-node"
-
-strategy:
-  enabled: true
-  type: RollingUpdate
-  rollingUpdate:
-    maxSurge: "25%"
 
 volumes:
  - name: sui-node-config-volume
@@ -130,26 +123,15 @@ volumes:
     items:
       - key: sui-node.yaml
         path: sui-node.yaml
- - name: sui-genesis-blob-volume
-   configMap:
-    name: genesis-blob-mainnet
-    items:
-      - key: genesis.blob
-        path: genesis.blob 
-
 
 volumeMounts:
  - name: sui-node-config-volume
    mountPath: "/opt/sui/config/sui-node.yaml"
    subPath: "sui-node.yaml"
    readOnly: true
- - name: sui-genesis-blob-volume
-   mountPath: "/opt/sui/config/genesis.blob"
-   subPath: "gensis.blob"
-   readOnly: true
- - name: ssd-storage
-   mountPath: "/opt/sui/db"
- 
+ - name: sui-node-pvc
+   mountPath: "/opt/sui"
+
 
 ingress:
   enabled: false
