rest: add endpoint for querying protocol config

--- a/crates/sui-rest-api/Cargo.toml
+++ b/crates/sui-rest-api/Cargo.toml
@@ -25,6 +25,7 @@ prometheus.workspace = true
 fastcrypto.workspace = true
 sui-types.workspace = true
 mysten-network.workspace = true
+sui-protocol-config.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
