--- a/crates/sui-move-lsp/Cargo.toml
+++ b/crates/sui-move-lsp/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "move-analyzer"
+name = "sui-move-lsp"
 version.workspace = true
 authors = ["Mysten Labs <build@mystenlabs.com>"]
 license = "Apache-2.0"
@@ -11,5 +11,5 @@ clap = { version = "4.1.4", features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
 
 bin-version.workspace = true
-move-lsp.workspace = true
+move-analyzer.workspace = true
 
