--- a/external-crates/move/crates/move-analyzer/Cargo.toml
+++ b/external-crates/move/crates/move-analyzer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "move-lsp"
+name = "move-analyzer"
 version = "1.0.0"
 authors = ["Diem Association <opensource@diem.com>"]
 description = "A language server for Move"
