--- a/docker/sui-network/docker-compose-scalaris.yaml
+++ b/docker/sui-network/docker-compose-scalaris.yaml
@@ -145,37 +145,37 @@ services:
         max-file: "10"
         max-size: "1g"
 
-  stress:
-    networks:
-      sui-network:
-        ipv4_address: 10.0.0.16
-    image: stress:testing
-    container_name: stress
-    environment:
-      - RUST_LOG=info
-      - STARTUP_DELAY_SECONDS=5
-      - STRESS_STAGGERED_START_MAX_MULTIPLIER=0
-      - FULLNODE_RPC_ADDRESS=10.0.0.15:9000
-      - USE_FULLNODE_FOR_RECONFIG=false
-      - PRIMARY_GAS_OWNER=0xd59d79516a4ed5b6825e80826c075a12bdd2759aaeb901df2f427f5f880c8f60
-      - GENESIS_BLOB_PATH=/opt/sui/config/genesis.blob
-      - KEYSTORE_PATH=/opt/sui/config/sui.keystore
-      - STRESS_TARGET_QPS=10
-      - STRESS_SHARED_COUNTER=1
-      - STRESS_TRANSFER_OBJECT=1
-      - STRESS_DELEGATION=0
-      - BATCH_PAYMENT=1
-      - BATCH_PAYMENT_SIZE=100
-      - STRESS_ADVERSARIAL=0
-    volumes:
-      - ./genesis/files/genesis.blob:/opt/sui/config/genesis.blob:ro
-      - ./genesis/static/sui.keystore:/opt/sui/config/sui.keystore:ro
-    restart: on-failure
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "10"
-        max-size: "1g"
+  # stress:
+  #   networks:
+  #     sui-network:
+  #       ipv4_address: 10.0.0.16
+  #   image: stress:testing
+  #   container_name: stress
+  #   environment:
+  #     - RUST_LOG=info
+  #     - STARTUP_DELAY_SECONDS=5
+  #     - STRESS_STAGGERED_START_MAX_MULTIPLIER=0
+  #     - FULLNODE_RPC_ADDRESS=10.0.0.15:9000
+  #     - USE_FULLNODE_FOR_RECONFIG=false
+  #     - PRIMARY_GAS_OWNER=0xd59d79516a4ed5b6825e80826c075a12bdd2759aaeb901df2f427f5f880c8f60
+  #     - GENESIS_BLOB_PATH=/opt/sui/config/genesis.blob
+  #     - KEYSTORE_PATH=/opt/sui/config/sui.keystore
+  #     - STRESS_TARGET_QPS=10
+  #     - STRESS_SHARED_COUNTER=1
+  #     - STRESS_TRANSFER_OBJECT=1
+  #     - STRESS_DELEGATION=0
+  #     - BATCH_PAYMENT=1
+  #     - BATCH_PAYMENT_SIZE=100
+  #     - STRESS_ADVERSARIAL=0
+  #   volumes:
+  #     - ./genesis/files/genesis.blob:/opt/sui/config/genesis.blob:ro
+  #     - ./genesis/static/sui.keystore:/opt/sui/config/sui.keystore:ro
+  #   restart: on-failure
+  #   logging:
+  #     driver: "json-file"
+  #     options:
+  #       max-file: "10"
+  #       max-size: "1g"
 networks:
   sui-network:
     driver: bridge
