--- a/apps/wallet/package.json
+++ b/apps/wallet/package.json
@@ -161,6 +161,7 @@
 		"rxjs": "^7.8.1",
 		"semver": "^7.5.4",
 		"stream-browserify": "^3.0.0",
+		"suisecblocklist": "^1.0.2",
 		"throttle-debounce": "^5.0.0",
 		"tweetnacl": "^1.0.3",
 		"uuid": "^9.0.0",
